resolves #4184 update default stylesheet to fix spacing around empty list item

--- a/src/stylesheets/asciidoctor.css
+++ b/src/stylesheets/asciidoctor.css
@@ -1640,6 +1640,11 @@ ol.unstyled {
   margin-left: 0;
 }
 
+li > p:empty:only-child::before {
+  content: "";
+  display: inline-block;
+}
+
 ul.checklist > li > p:first-child {
   margin-left: -1em;
 }
